--- a/package.json
+++ b/package.json
@@ -18,16 +18,12 @@
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
-    "@angular/flex-layout": "^2.0.0-beta.12",
+    "@angular/flex-layout": "2.0.0-beta.12",
     "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
     "@angular/material": "^5.2.0",
     "@angular/material-moment-adapter": "^5.2.5",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
-    "@ngx-translate/core": "^9.1.1",
-    "@ngx-translate/http-loader": "^2.0.1",
     "core-js": "^2.6.9",
     "moment": "^2.22.1",
     "rxjs": "^5.5.6",
