--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 4500",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -24,6 +24,9 @@
     "@angular/material-moment-adapter": "^5.2.5",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/router": "^5.2.11",
+    "@ngx-translate/core": "^9.1.1",
+    "@ngx-translate/http-loader": "^2.0.1",
     "core-js": "^2.6.9",
     "moment": "^2.22.1",
     "rxjs": "^5.5.6",
